[gd_scene load_steps=5 format=3 uid="uid://u1v2w3x4y5z6"]

[ext_resource type="Script" path="res://ui/GameUI.gd" id="1_ui_script"]
[ext_resource type="Texture2D" path="res://assets/ui_panel.svg" id="2_panel"]
[ext_resource type="Texture2D" path="res://assets/button.svg" id="3_btn"]
[ext_resource type="Texture2D" path="res://assets/coin_pearl.svg" id="4_pearl"]
[ext_resource type="Shader" path="res://ui/shaders/blur_shader.gdshader" id="5_blur"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blur"]
shader = ExtResource("5_blur")
shader_parameter/lod = 2.0

[node name="GameUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ui_script")

[node name="BlurLayer" type="CanvasLayer" parent="."]
layer = 5
visible = false

[node name="BackBufferCopy" type="BackBufferCopy" parent="BlurLayer"]
copy_mode = 2

[node name="BlurRect" type="ColorRect" parent="BlurLayer"]
material = SubResource("ShaderMaterial_blur")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TopBar" type="HBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 0

[node name="ScorePanel" type="TextureRect" parent="HUD/MarginContainer/TopBar"]
custom_minimum_size = Vector2(240, 70)
layout_mode = 2
texture = ExtResource("2_panel")
material = SubResource("ShaderMaterial_blur")
expand_mode = 1

[node name="ScoreLabel" type="Label" parent="HUD/MarginContainer/TopBar/ScorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Depth: 0m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="HUD/MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PearlPanel" type="TextureRect" parent="HUD/MarginContainer/TopBar"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
texture = ExtResource("2_panel")
material = SubResource("ShaderMaterial_blur")
expand_mode = 1

[node name="HBox" type="HBoxContainer" parent="HUD/MarginContainer/TopBar/PearlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Icon" type="TextureRect" parent="HUD/MarginContainer/TopBar/PearlPanel/HBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_pearl")
expand_mode = 1
stretch_mode = 5

[node name="PearlLabel" type="Label" parent="HUD/MarginContainer/TopBar/PearlPanel/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="BottomBar" type="HBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="EquipmentPanel" type="HBoxContainer" parent="HUD/MarginContainer/BottomBar"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/MarginContainer/BottomBar/EquipmentPanel"]
layout_mode = 2
text = "TOOL:"

[node name="ToolName" type="Label" parent="HUD/MarginContainer/BottomBar/EquipmentPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "Bare Hands"

[node name="Spacer" type="Control" parent="HUD/MarginContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ZoneLabel" type="Label" parent="HUD/MarginContainer/BottomBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 24
text = "THE SHALLOWS"

[node name="NotificationLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="MenuLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.05, 0.1, 0.4)

[node name="MenuPanel" type="CenterContainer" parent="MenuLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="MenuLayer/MenuPanel"]
custom_minimum_size = Vector2(450, 400)
layout_mode = 2
material = SubResource("ShaderMaterial_blur")

[node name="VBox" type="VBoxContainer" parent="MenuLayer/MenuPanel/Panel"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Title" type="Label" parent="MenuLayer/MenuPanel/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.8, 1)
theme_override_font_sizes/font_size = 52
text = "ABYSS DIVER"
horizontal_alignment = 1

[node name="SubTitle" type="Label" parent="MenuLayer/MenuPanel/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "COLLECT THE SHARDS OF THE DEEP"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuLayer/MenuPanel/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HighScoreLabel" type="Label" parent="MenuLayer/MenuPanel/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "BEST DEPTH: 0m"
horizontal_alignment = 1

[node name="Controls" type="Label" parent="MenuLayer/MenuPanel/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "[WASD] MOVE â€¢ [SPACE] DASH"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MenuLayer/MenuPanel/Panel/VBox"]
custom_minimum_size = Vector2(220, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "BEGIN DIVE"

[node name="GameOverLayer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="GameOverLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0, 0, 0.5)

[node name="GameOverPanel" type="CenterContainer" parent="GameOverLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="GameOverLayer/GameOverPanel"]
custom_minimum_size = Vector2(400, 320)
layout_mode = 2
material = SubResource("ShaderMaterial_blur")

[node name="VBox" type="VBoxContainer" parent="GameOverLayer/GameOverPanel/Panel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="GameOverLayer/GameOverPanel/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 48
text = "LIMIT REACHED"
horizontal_alignment = 1

[node name="ResultBox" type="VBoxContainer" parent="GameOverLayer/GameOverPanel/Panel/VBox"]
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="GameOverLayer/GameOverPanel/Panel/VBox/ResultBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "DEPTH: 1240m"
horizontal_alignment = 1

[node name="PearlBonusLabel" type="Label" parent="GameOverLayer/GameOverPanel/Panel/VBox/ResultBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "+ 42 Pearls Collected"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverLayer/GameOverPanel/Panel/VBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "RE-DIVE"

[connection signal="pressed" from="MenuLayer/MenuPanel/Panel/VBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="GameOverLayer/GameOverPanel/Panel/VBox/RestartButton" to="." method="_on_restart_button_pressed"]
